src/app/components/blocks/dogs/doughnut-chart.module.css
.root {
    position: relative;
    width: 400px;
    height: 400px;

    @media (max-width: 1200px) {
        width: 100%;
        height: auto;
    }
}

.svgContainer {
    cursor: pointer;
}

.doughnutImage {
    position: absolute;
    border-radius: 50%;
    background-color: transparent;
    top: 25%;
    left: 25%;
    width: 50%;
    height: 50%;
    overflow: hidden;
}

.doughnutName {
    position: absolute;
    font-size: 22px;
    color: #0D2A43;
    font-weight: 800;
    top: 11%;
    left: 0;
    display: block;
    width: 100%;
    text-align: center;
    pointer-events: none;

    @media (max-width: 1200px) {
        font-size: 18px;
    }
}

.inactiveDoughnut {
    opacity: 0.5;
    transition: opacity .4s ease-in-out;
}

